<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ECommHunt</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="anyone_canshop">Anyone can shop here!!</string>
    <string name="title_activity_select_language">SelectLanguageActivity</string>
    <string name="select_your_language">Select your language..</string>

    <string-array name="languages">
        <item>English</item>
        <item>हिन्दी</item>
    </string-array>

    <string name="english">English</string>
    <string name="hindi">हिन्दी</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_product_list">ProductListActivity</string>
    <string name="shop_here">SHOP HERE</string>
    <string name="read_news">READ NEWS</string>
    <string name="gossip">GOSSIP</string>
    <string name="ebook">E-BOOK</string>
    <string name="policies">Policies</string>
    <string name="help">Help</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email_hint">* Email</string>
    <string name="password_hint">* Password</string>
    <string name="login_in">LOGIN IN</string>
    <string name="register">REGISTER</string>
    <string name="new_user_title">NEW USER</string>
    <string name="login_in_facebook">LOGIN IN WITH FACEBOOK</string>
    <string name="login_in_google_plus">LOGIN IN WITH GOOGLE+</string>
    <string name="sort_by">SORT BY</string>
    <string name="filter">FILTER</string>
    <string name="no_products_available">No products available</string>
    <string name="offer_price">Offer Price</string>
    <string name="reset">Reset</string>
    <string name="price_high_to_low">Price high to low</string>
    <string name="price_low_to_high">Price low to high</string>
    <string name="original_price">Original Price</string>
    <string name="add_to_bag">Add to cart</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="in_stock">In stock</string>
    <string name="Rs">\u20B9</string>
    <string name="title_activity_select_topic">SelectTopicActivity</string>
    <string name="search">Search</string>

</resources>