<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DashboardActivity" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonShopHere"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="5dp"
                android:background="@drawable/custom_yellow_button"
                android:text="@string/shop_here"
                android:textColor="@color/txt_greydark"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonReadNews"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="5dp"
                android:background="@drawable/custom_green_button"
                android:text="@string/read_news"
                android:textColor="@color/txt_greydark"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonGossip"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="5dp"
                android:background="@drawable/custom_blue_button"
                android:text="@string/gossip"
                android:textColor="@color/txt_greydark"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonEbook"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="5dp"
                android:background="@drawable/custom_red_button"
                android:text="@string/ebook"
                android:textColor="@color/txt_greydark"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</RelativeLayout>