<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:padding="15dp" >

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="@dimen/dp_6" />

            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="@dimen/dp_6" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="@dimen/dp_6" />

            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="@dimen/dp_14" />

            <Button
                android:id="@+id/btn_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_in"
                android:textColor="@android:color/white"
                android:background="@drawable/custom_green_button" />

            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="@dimen/dp_8" />

            <Button
                android:id="@+id/facebook_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_in_facebook"
                android:textColor="@android:color/white"
                android:background="@drawable/custom_blue_button" />

            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="@dimen/dp_8" />
            
            <Button
                android:id="@+id/google_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_in_facebook"
                android:textColor="@android:color/white"
                android:background="@drawable/color_google_btn" 
                android:drawableLeft="@drawable/btn_red"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/dp_6"
            android:background="@android:color/transparent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:text="@string/new_user_title" />

            <Button
                android:id="@+id/btn_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_4"
                android:text="@string/register"
                android:textColor="@color/text_color"
                android:background="@drawable/custom_yellow_button" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>